views/pages/_page-single.scss
#page-single {
  #author-date-category,
  #story-tags {
    .text {
      color: $dark-gray-col;
    }

    a {
      color: $dark-brick-col;
      text-decoration: none;

      &:hover {
        color: $dark-brick-col;
        text-decoration: none;
      }
    }
  }

  .post-title {
    @include header-style;
  }
}

/*
    These styles exist to style content from posts migrated from the previous site that were not created with the gutenberg editor
    
    Any styles added to accomodate older migrated posts should be added here, and also should be made to be specific to avoid conflicting 
    with newer articles created using the gutenberg editor
*/
#page-single {
  article.format-standard {
    margin-top: 8px;
    padding-top: 40px;
    padding-bottom: 40px;
    border-top: 1px solid #e6e7e8;

    > img,
    > p img {
      display: block;
      max-width: 100%;
      margin: 0 auto;
      height: auto;

      margin-top: 24px;
      margin-bottom: 24px;

      display: flex;
      flex-direction: column;
      align-items: center;

      figcaption {
        text-align: center;
        font-style: italic;
      }
    }

    > p > small:only-child {
      display: flex;
      justify-content: center;
      margin-bottom: 20px;
    }

    h4 {
      color: $dark-brick-col;
    }
  }
}

